INTERNAL-46: Fix forgot password submission

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
@@ -29,15 +29,14 @@ $successMessage = $block->getSuccessMessage();
 $recaptcha = $block->getData('viewModelRecaptcha');
 ?>
 
-<div class="container mx-auto flex h-full md:items-center px-5 mt-16">
+<div class="container mx-auto flex h-full md:items-center px-5 mt-16" x-data="Authentication">
     <div class="mx-auto mb-16 w-[412px] max-w-full">
         <div class="flex items-center w-full justify-center" aria-labelledby="block-customer-login-heading">
             <form action="<?= $escaper->escapeUrl($block->getUrl('*/*/forgotpasswordpost')) ?>"
                   method="post"
                   class="w-full"
                   id="<?= $escaper->escapeHtmlAttr($formId) ?>"
-                  x-data="initPasswordForm()"
-                  @submit.prevent="submitForm();">
+                  @submit.prevent="submitForgotPasswordForm('<?= $escaper->escapeJs($formId) ?>');">
                 <?= $block->getBlockHtml('formkey') ?>
                 <input type="hidden" name="formId" value="<?= $escaper->escapeHtmlAttr($formId) ?>"/>
                 <?= $block->getChildHtml('form_fields_before') ?>
@@ -86,41 +85,6 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                     </div>
                 </div>
             </form>
-            <script>
-                function initPasswordForm() {
-                    return {
-                        hasCaptchaToken: 0,
-                        submitForm() {
-                            const $form = document.querySelector('#<?= $escaper->escapeJs($formId) ?>');
-
-                            const formData = new FormData($form);
-
-                            fetch($form.action, {
-                                method: 'POST',
-                                body: formData,
-                                headers: {
-                                    'X-Requested-With': 'XMLHttpRequest' // Optional if you want to handle it as an AJAX request
-                                }
-                            })
-                                .then(response => {
-                                    if (response.status === 302) {
-                                        window.location.href = '<?= $escaper->escapeJs($block->getLoginUrl()) ?>';
-                                    }
-
-                                    else {
-                                        return response.text().then(errorText => {
-                                            window.hyva.replaceDomElement('#<?= $escaper->escapeJs($formId) ?>', errorText);
-                                        });
-                                    }
-                                })
-                                .catch(error => {
-                                    console.error('Form submission failed:', error);
-                                });
-                        }
-                    }
-                }
-            </script>
-
         </div>
     </div>
 </div>
