--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
@@ -22,14 +22,13 @@ $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocom
 $formId = 'user_forgotpassword';
 
 $errorMessage = $block->getErrorMessage();
-$successMessage = $block->getSuccessMessage();
 
 // Do not replace this with $viewModels->require(ReCaptcha::class); that might break the dependency
 // on the Magento_ReCaptchaCustomer module
 $recaptcha = $block->getData('viewModelRecaptcha');
 ?>
 
-<div class="container mx-auto flex h-full md:items-center px-5 mt-16" x-data="Authentication">
+<div class="container mx-auto flex h-full md:items-center px-5 items-center" x-data="Authentication">
     <div class="mx-auto mb-16 w-[412px] max-w-full">
         <div class="flex items-center w-full justify-center" aria-labelledby="block-customer-login-heading">
             <form action="<?= $escaper->escapeUrl($block->getUrl('*/*/forgotpasswordpost')) ?>"
