INTERNAL-56: Implement session error messages in login form

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
@@ -35,7 +35,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                   method="post"
                   class="w-full"
                   id="<?= $escaper->escapeHtmlAttr($formId) ?>"
-                  @submit.prevent="submitForgotPasswordForm('<?= $escaper->escapeJs($formId) ?>');">
+                  @submit.prevent="submitAuthForm('<?= $escaper->escapeJs($formId) ?>');">
                 <?= $block->getBlockHtml('formkey') ?>
                 <input type="hidden" name="formId" value="<?= $escaper->escapeHtmlAttr($formId) ?>"/>
                 <?= $block->getChildHtml('form_fields_before') ?>
