--- a/app/design/frontend/Satoshi/Hyva/Magento_Vault/templates/customer_account/credit_card.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Vault/templates/customer_account/credit_card.phtml
@@ -1,19 +1,30 @@
 <?php
+/**
+ * Hyvä Themes - https://hyva.io
+ * Copyright © Hyvä Themes 2020-present. All rights reserved.
+ * This product is licensed per Magento install
+ * See https://hyva.io/license
+ */
 
+declare(strict_types=1);
+
+use Hyva\Theme\Model\ViewModelRegistry;
+use Hyva\Theme\ViewModel\Modal;
+use Hyva\Theme\ViewModel\SvgIcons;
+use Magento\Framework\Escaper;
 use Magento\Framework\View\Element\Template;
 use Magento\Vault\Api\Data\PaymentTokenInterface;
 use Magento\Vault\Block\CardRendererInterface;
-use Hyva\Theme\Model\ViewModelRegistry;
-use Hyva\Theme\ViewModel\SvgIcons;
-
 
 /** @var CardRendererInterface|Template $block */
-
+/** @var Escaper $escaper */
 /** @var ViewModelRegistry $viewModels */
 
-$hyvaicons = $viewModels->require(SvgIcons::class);
+$modalViewModel = $viewModels->require(Modal::class);
 
-$ccNumberView = $block->escapeHtml($block->getNumberLast4Digits());
+$ccNumberView = $escaper->escapeHtml($block->getNumberLast4Digits());
+
+$hyvaicons = $viewModels->require(SvgIcons::class);
 ?>
 <div class="grid md:grid-cols-4">
     <div class="grid grid-cols-2 md:grid-cols-1 mb-4 md:mb-0">
@@ -42,36 +53,31 @@ $ccNumberView = $block->escapeHtml($block->getNumberLast4Digits());
              alt="card-icon"
         >
     </div>
-    <div class="grid grid-cols-2 md:flex justify-end mb-4 md:mb-0">
+    <div class="grid grid-cols-2 md:grid-cols-1 mb-4 md:mb-0">
         <div class="md:hidden font-bold">
             <?= $block->escapeHtml(__('Actions')) ?>
         </div>
-        <form
-            class="form"
-            action="<?= $block->escapeUrl($block->getUrl('vault/cards/deleteaction')) ?>"
-            method="post"
-        >
-            <?= $block->getBlockHtml('formkey') ?>
-            <input
-                name="<?= /* @noEscape */
-                PaymentTokenInterface::PUBLIC_HASH ?>"
-                value="<?= /* @noEscape */
-                $block->getToken()->getPublicHash() ?>"
-                type="hidden"/>
-            <button type="submit"
-                    data-mage-init='{
-                                    "Magento_Vault/js/customer_account/deleteWidget":{
-                                        "type": "popup",
-                                        "modalClass": "my-credit-cards-popup",
-                                        "toggleEvent": "click",
-                                        "title": "<?= $block->escapeHtml(__('Delete')) ?>",
-                                        "content": "<?= $block->escapeHtml(__('Are you sure you want to delete this card: %1?', $ccNumberView)) ?>"
-                                    }
-                                }'>
-                <span>
-                    <?= $hyvaicons->renderHtml('trash', 'text-lg text-primary-700'); ?>
-                </span>
-            </button>
-        </form>
+        <div class="flex md:justify-end" x-data="hyva.modal()">
+            <form class="form"
+                  action="<?= $escaper->escapeUrl($block->getUrl('vault/cards/deleteaction')) ?>"
+                  method="post"
+                  x-ref="form">
+                <?= $block->getBlockHtml('formkey') ?>
+                <input
+                    name="<?= /* @noEscape */
+                    PaymentTokenInterface::PUBLIC_HASH ?>"
+                    value="<?= $escaper->escapeHtmlAttr($block->getToken()->getPublicHash()) ?>"
+                    type="hidden"/>
+
+                <?php $message = $escaper->escapeHtml(__('Are you sure you want to delete this card: %1?', $ccNumberView)) ?>
+                <?php $confirmation = $modalViewModel->confirm($message) ?>
+                <button type="button"
+                        @click="<?= /** @noEscape */
+                        $confirmation->getShowJs() ?>.then(ok => ok && $refs.form.submit())">
+                    <?= $hyvaicons->renderHtml('trash', 'text-xl text-primary-700'); ?>                </button>
+                <?= /** @noEscape */
+                $confirmation ?>
+            </form>
+        </div>
     </div>
 </div>
