--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/grid.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/grid.phtml
@@ -24,7 +24,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                 <!-- pagination-content -->
                 <?php foreach ($additionalAddresses as $address): ?>
                     <?php $i++ ?>
-                    <div class="bg-white grid lg:grid-cols-6 gap-4 mt-5 p-5 rounded-xl">
+                    <div class="bg-bg-400 grid lg:grid-cols-6 gap-4 mt-5 p-5 rounded-xl">
                         <div class="grid grid-cols-2 lg:flex lg:flex-col gap-2">
                             <div class="text-text-500 font-bold">
                                 <?= $escaper->escapeHtml(__('Company')) ?>
