--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/edit.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/edit.phtml
@@ -25,197 +25,201 @@ $storeConfig = $viewModels->require(StoreConfig::class);
 $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocomplete_on_storefront');
 ?>
 
-<h2 class="text-text-500 text-lg font-bold mb-5">
-    <?= $escaper->escapeHtml(__('Account Information')) ?>
-</h2>
+<section class="w-full xl:w-1/2">
+    <h2 class="text-text-500 text-lg font-bold mb-5">
+        <?= $escaper->escapeHtml(__('Account Information')) ?>
+    </h2>
 
-<form
-    action="<?= $escaper->escapeUrl($block->getUrl('customer/account/editPost')) ?>"
-    method="post"
-    id="form-validate"
-    enctype="multipart/form-data"
-    x-data="Object.assign(AccountInformation(), hyva.formValidation($el), initForm())"
-    @submit.prevent="submitForm(() => handleFormSubmit())"
-    autocomplete="off"
->
-    <div class="bg-bg-400 p-5 rounded-xl">
-        <?= $block->getBlockHtml('formkey') ?>
-        <div class="space-y-3">
-            <?= $block->getLayout()->createBlock(Name::class)->setObject($block->getCustomer())->toHtml() ?>
-        </div>
-        <?php $dob = $block->getLayout()->createBlock(\Magento\Customer\Block\Widget\Dob::class) ?>
-        <?php $taxvat = $block->getLayout()->createBlock(\Magento\Customer\Block\Widget\Taxvat::class) ?>
-        <?php $gender = $block->getLayout()->createBlock(\Magento\Customer\Block\Widget\Gender::class) ?>
-        <?php if ($dob->isEnabled()): ?>
-            <?= $dob->setDate($block->getCustomer()->getDob())->toHtml() ?>
-        <?php endif ?>
-        <?php if ($taxvat->isEnabled()): ?>
-            <?= $taxvat->setTaxvat($block->getCustomer()->getTaxvat())->toHtml() ?>
-        <?php endif ?>
-        <?php if ($gender->isEnabled()): ?>
-            <?= $gender->setGender($block->getCustomer()->getGender())->toHtml() ?>
-        <?php endif ?>
+    <form
+        action="<?= $escaper->escapeUrl($block->getUrl('customer/account/editPost')) ?>"
+        method="post"
+        id="form-validate"
+        enctype="multipart/form-data"
+        x-data="Object.assign(AccountInformation(), hyva.formValidation($el), initForm())"
+        @submit.prevent="submitForm(() => handleFormSubmit())"
+        autocomplete="off"
+    >
+        <div class="bg-bg-400 p-5 rounded-xl">
+            <?= $block->getBlockHtml('formkey') ?>
+            <div class="space-y-3">
+                <?= $block->getLayout()->createBlock(Name::class)->setObject($block->getCustomer())->toHtml() ?>
+            </div>
+            <?php $dob = $block->getLayout()->createBlock(\Magento\Customer\Block\Widget\Dob::class) ?>
+            <?php $taxvat = $block->getLayout()->createBlock(\Magento\Customer\Block\Widget\Taxvat::class) ?>
+            <?php $gender = $block->getLayout()->createBlock(\Magento\Customer\Block\Widget\Gender::class) ?>
+            <?php if ($dob->isEnabled()): ?>
+                <?= $dob->setDate($block->getCustomer()->getDob())->toHtml() ?>
+            <?php endif ?>
+            <?php if ($taxvat->isEnabled()): ?>
+                <?= $taxvat->setTaxvat($block->getCustomer()->getTaxvat())->toHtml() ?>
+            <?php endif ?>
+            <?php if ($gender->isEnabled()): ?>
+                <?= $gender->setGender($block->getCustomer()->getGender())->toHtml() ?>
+            <?php endif ?>
 
-        <label class="flex items-center gap-x-3 mt-5 mb-3 mx-4" for="change-email">
-            <input
-                type="checkbox"
-                name="change_email"
-                id="change-email"
-                value="1"
-                title="<?= $escaper->escapeHtmlAttr(__('Change email')) ?>"
-                @change="handleCheckboxChange('email-fields')"
-                class="checkbox__input"
-                aria-describedby="change_email_description"
-            />
-            <span class="checkbox__control w-5 h-5" aria-hidden="true">
+            <label class="flex items-center gap-x-3 mt-5 mb-3 mx-4" for="change-email">
+                <input
+                    type="checkbox"
+                    name="change_email"
+                    id="change-email"
+                    value="1"
+                    title="<?= $escaper->escapeHtmlAttr(__('Change email')) ?>"
+                    @change="handleCheckboxChange('email-fields')"
+                    class="checkbox__input"
+                    aria-describedby="change_email_description"
+                />
+                <span class="checkbox__control w-5 h-5" aria-hidden="true">
                 <?= $hyvaicons->renderHtml('checkmark') ?>
             </span>
-            <span class="checkbox__label ml-0"><?= $escaper->escapeHtml(__('Change email')) ?></span>
-            <span class="sr-only"
-                  id="change_email_description"><?= $escaper->escapeHtml(__('form appears when field is selected')) ?></span>
-        </label>
+                <span class="checkbox__label ml-0"><?= $escaper->escapeHtml(__('Change email')) ?></span>
+                <span class="sr-only"
+                      id="change_email_description"><?= $escaper->escapeHtml(__('form appears when field is selected')) ?></span>
+            </label>
 
-        <label class="flex items-center gap-x-3 mt-3 mx-4" for="change-password">
-            <input
-                type="checkbox"
-                name="change_password"
-                id="change-password"
-                value="1"
-                title="<?= $escaper->escapeHtmlAttr(__('Change password')) ?>"
-                @change="handleCheckboxChange('password-fields')"
-                <?php if ($block->getChangePassword()): ?> checked<?php endif; ?>
-                class="checkbox__input"
-                aria-describedby="change_password_description"
-            />
-            <span class="checkbox__control w-5 h-5" aria-hidden="true">
+            <label class="flex items-center gap-x-3 mt-3 mx-4" for="change-password">
+                <input
+                    type="checkbox"
+                    name="change_password"
+                    id="change-password"
+                    value="1"
+                    title="<?= $escaper->escapeHtmlAttr(__('Change password')) ?>"
+                    @change="handleCheckboxChange('password-fields')"
+                    <?php if ($block->getChangePassword()): ?> checked<?php endif; ?>
+                    class="checkbox__input"
+                    aria-describedby="change_password_description"
+                />
+                <span class="checkbox__control w-5 h-5" aria-hidden="true">
                 <?= $hyvaicons->renderHtml('checkmark') ?>
             </span>
-            <span class="checkbox__label ml-0"><?= $escaper->escapeHtml(__('Change password')) ?></span>
-            <span class="sr-only"
-                  id="change_password_description"><?= $escaper->escapeHtml(__('form appears when field is selected')) ?></span>
-        </label>
+                <span class="checkbox__label ml-0"><?= $escaper->escapeHtml(__('Change password')) ?></span>
+                <span class="sr-only"
+                      id="change_password_description"><?= $escaper->escapeHtml(__('form appears when field is selected')) ?></span>
+            </label>
 
-        <template x-if="showEmailField">
-            <div
-                class="field field-reserved mt-7"
-                id="email-fields"
-            >
-                <label class="sr-only tracking-widest" for="email">
-                    <span><?= $escaper->escapeHtml(__('Email')) ?></span>
-                </label>
-                <div>
-                    <input type="email" name="email" id="email" autocomplete="email" required
-                           value="<?= $escaper->escapeHtmlAttr($block->getCustomer()->getEmail()) ?>"
-                           title="<?= $escaper->escapeHtmlAttr(__('Email')) ?>"
-                           placeholder="<?= $escaper->escapeHtmlAttr(__('Your email')) ?>"
-                           class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
-                    />
+            <template x-if="showEmailField">
+                <div
+                    class="field field-reserved mt-7"
+                    id="email-fields"
+                >
+                    <label class="sr-only tracking-widest" for="email">
+                        <span><?= $escaper->escapeHtml(__('Email')) ?></span>
+                    </label>
+                    <div>
+                        <input type="email" name="email" id="email" autocomplete="email" required
+                               value="<?= $escaper->escapeHtmlAttr($block->getCustomer()->getEmail()) ?>"
+                               title="<?= $escaper->escapeHtmlAttr(__('Email')) ?>"
+                               placeholder="<?= $escaper->escapeHtmlAttr(__('Your email')) ?>"
+                               class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
+                        />
+                    </div>
                 </div>
-            </div>
-        </template>
+            </template>
 
-        <template x-if="showEmailField || showPasswordFields">
-            <div
-                class="field field-reserved mt-3 mb-5" :class="{'!mt-7': !showEmailField, '!mb-0': showPasswordFields}"
-                id="password-fields"
-            >
-                <label class="sr-only tracking-widest" for="current-password">
-                    <span><?= $escaper->escapeHtml(__('Current Password')) ?></span>
-                </label>
-                <div>
-                    <input type="password"
-                           class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
-                           name="current_password" id="current-password"
-                           data-input="current-password"
-                           placeholder="<?= $escaper->escapeHtmlAttr(__('Your current password')) ?>"
-                           required
-                           autocomplete="<?= $isAutocompleteEnabled ? 'current-password' : 'off' ?>"
-                           aria-describedby="password-strength-meter"
-                    />
+            <template x-if="showEmailField || showPasswordFields">
+                <div
+                    class="field field-reserved mt-3 mb-5" :class="{'!mt-7': !showEmailField, '!mb-0': showPasswordFields}"
+                    id="password-fields"
+                >
+                    <label class="sr-only tracking-widest" for="current-password">
+                        <span><?= $escaper->escapeHtml(__('Current Password')) ?></span>
+                    </label>
+                    <div>
+                        <input type="password"
+                               class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
+                               name="current_password" id="current-password"
+                               data-input="current-password"
+                               placeholder="<?= $escaper->escapeHtmlAttr(__('Your current password')) ?>"
+                               required
+                               autocomplete="<?= $isAutocompleteEnabled ? 'current-password' : 'off' ?>"
+                               aria-describedby="password-strength-meter"
+                        />
+                    </div>
                 </div>
-            </div>
-        </template>
+            </template>
 
-        <template x-if="showPasswordFields">
-            <div>
-                <div class="field field-reserved mt-3">
-                    <label class="sr-only tracking-widest" for="password"><span>
+            <template x-if="showPasswordFields">
+                <div>
+                    <div class="field field-reserved mt-3">
+                        <label class="sr-only tracking-widest" for="password"><span>
                             <?= $escaper->escapeHtml(__('New Password')) ?>
                     </span></label>
-                    <div>
-                        <input
-                            type="password"
-                            class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
-                            name="password"
-                            id="password"
-                            placeholder="<?= $escaper->escapeHtmlAttr(__('New password')) ?>"
-                            required
-                            data-validate='{"password-strength": {"minCharacterSets": <?= (int)$passwordMinCharacterSets ?>}}'
-                            @input="onChange"
-                            minlength="<?= $escaper->escapeHtmlAttr($minimumPasswordLength) ?>"
-                            autocomplete="<?= $isAutocompleteEnabled ? 'new-password' : 'off' ?>"
-                            aria-describedby="password-strength-meter"
-                        />
-                        <div id="password-strength-meter-container" class="mt-2 text-sm"
-                             data-role="password-strength-meter" aria-live="polite">
-                            <div id="password-strength-meter" class="password-strength-meter">
-                                <?= $escaper->escapeHtml(__('Password Strength')) ?>:
-                                <span id="password-strength-meter-label" class="lowercase"
-                                      data-role="password-strength-meter-label">
+                        <div>
+                            <input
+                                type="password"
+                                class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
+                                name="password"
+                                id="password"
+                                placeholder="<?= $escaper->escapeHtmlAttr(__('New password')) ?>"
+                                required
+                                data-validate='{"password-strength": {"minCharacterSets": <?= (int)$passwordMinCharacterSets ?>}}'
+                                @input="onChange"
+                                minlength="<?= $escaper->escapeHtmlAttr($minimumPasswordLength) ?>"
+                                autocomplete="<?= $isAutocompleteEnabled ? 'new-password' : 'off' ?>"
+                                aria-describedby="password-strength-meter"
+                            />
+                            <div id="password-strength-meter-container" class="mt-2 text-sm"
+                                 data-role="password-strength-meter" aria-live="polite">
+                                <div id="password-strength-meter" class="password-strength-meter">
+                                    <?= $escaper->escapeHtml(__('Password Strength')) ?>:
+                                    <span id="password-strength-meter-label" class="lowercase"
+                                          data-role="password-strength-meter-label">
                                     <?= $escaper->escapeHtml(__('No Password')) ?>
                                 </span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="field field-reserved mt-3 mb-5">
-                    <label class="sr-only tracking-widest" for="password-confirmation">
-                        <span><?= $escaper->escapeHtml(__('Confirm New Password')) ?></span>
-                    </label>
-                    <div>
-                        <input
-                            type="password"
-                            class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
-                            name="password_confirmation" id="password-confirmation"
-                            placeholder="<?= $escaper->escapeHtml(__('Confirm new password')) ?>"
-                            data-validate='{"equalTo": "password"}'
-                            title="<?= $escaper->escapeHtmlAttr(__('Confirm Password')) ?>"
-                            @input="onChange"
-                            autocomplete="<?= $isAutocompleteEnabled ? 'new-password' : 'off' ?>"
-                        />
+                    <div class="field field-reserved mt-3 mb-5">
+                        <label class="sr-only tracking-widest" for="password-confirmation">
+                            <span><?= $escaper->escapeHtml(__('Confirm New Password')) ?></span>
+                        </label>
+                        <div>
+                            <input
+                                type="password"
+                                class="input__field input__field--outline h-auto bg-bg-500 px-5 py-2.5"
+                                name="password_confirmation" id="password-confirmation"
+                                placeholder="<?= $escaper->escapeHtml(__('Confirm new password')) ?>"
+                                data-validate='{"equalTo": "password"}'
+                                title="<?= $escaper->escapeHtmlAttr(__('Confirm Password')) ?>"
+                                @input="onChange"
+                                autocomplete="<?= $isAutocompleteEnabled ? 'new-password' : 'off' ?>"
+                            />
+                        </div>
                     </div>
                 </div>
-            </div>
-        </template>
-        <?= $block->getChildHtml('fieldset_edit_info_additional') ?>
-        <?= $block->getChildHtml('form_additional_info') ?>
-    </div>
-    <?= $recaptcha ? $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_EDIT) : '' ?>
-    <div class="flex gap-x-4 flex-col md:flex-row mt-5">
-        <button
-            type="submit"
-            class="button button--filled-primary"
-            :class="isLoading && 'button--disabled'"
-            title="<?= $escaper->escapeHtmlAttr(__('Save')) ?>"
-            :disabled="isLoading"
-        >
+            </template>
+            <?= $block->getChildHtml('fieldset_edit_info_additional') ?>
+            <?= $block->getChildHtml('form_additional_info') ?>
+        </div>
+        <?= $recaptcha ? $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_EDIT) : '' ?>
+        <div class="flex gap-x-4 flex-col md:flex-row mt-5">
+            <button
+                type="submit"
+                class="button button--filled-primary"
+                :class="isLoading && 'button--disabled'"
+                title="<?= $escaper->escapeHtmlAttr(__('Save')) ?>"
+                :disabled="isLoading"
+            >
             <span x-text="isLoading ?
                 '<?= $escaper->escapeHtml(__('Saving...')) ?>' :
                 '<?= $escaper->escapeHtml(__('Save')) ?>'">Save</span>
-        </button>
-        <a
-            class="button button--ghost-primary"
-            href="<?= $escaper->escapeUrl($block->getBackUrl()) ?>"
-            x-element-transition-trigger
-        >
-            <span><?= $escaper->escapeHtml(__('Go back')) ?></span>
-        </a>
+            </button>
+            <a
+                class="button button--ghost-primary"
+                href="<?= $escaper->escapeUrl($block->getBackUrl()) ?>"
+                x-element-transition-trigger
+            >
+                <span><?= $escaper->escapeHtml(__('Go back')) ?></span>
+            </a>
+        </div>
+    </form>
+
+    <div class="w-full">
+        <?= $recaptcha ? $recaptcha->getLegalNoticeHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_EDIT) : '' ?>
     </div>
-</form>
-<div class="w-full">
-    <?= $recaptcha ? $recaptcha->getLegalNoticeHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_EDIT) : '' ?>
-</div>
+</section>
+
 <script>
     function initForm() {
         return {
